--- a/templates/feedback/complaint.html
+++ b/templates/feedback/complaint.html
@@ -17,7 +17,7 @@
         </div>
         <div class="form-group">
             <label id="sender-label">投诉人：</label>
-            <input type="text" name="sender" value="{{ session['username'] }}" readonly class="animated-input">
+            <input type="text" name="sender" value="{{ g.username }}" readonly class="animated-input">
         </div>
         <div id="complaint-fields">
             <div class="form-group" style="position:relative;">
